Add method controls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,3 +11,8 @@
   <button (click)="clearSessionStorage()">Clear Session Storage</button>
   <button (click)="clearStorage()">Clear Storage</button>
 </div>
+
+<div class="margin-top">
+  <label>{{label}}</label>
+  <p>{{result}}</p>
+</div>
